<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#616161"
    android:id="@+id/main_layout"
    tools:context="com.example.itcapstone.burglarkitten.MainActivity"
    android:translationZ="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/imageView"
            android:src="@drawable/burk_logo3"
            android:scaleType="fitCenter"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:id="@+id/scrollView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/background_floating_material_dark"
            android:background="@color/background_floating_material_dark"
            android:translationZ="8dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/WelcomeMessage"
                android:id="@+id/textView"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:textSize="28dp"
                android:textColor="@android:color/white" />
        </ScrollView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp" >

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/QuizGameButton"
                android:id="@+id/button"
                android:textSize="26dp"
                android:onClick="QuestionActivity"
                android:translationZ="8dp"
                android:background="@android:color/holo_orange_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white">

            </View>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="About Us"
                android:id="@+id/button2"
                android:textSize="26dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="AboutUs" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white">

            </View>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ChatButton"
                android:id="@+id/button4"
                android:textSize="26dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="Chat" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white">

            </View>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="Contact Us"
                android:id="@+id/button3"
                android:textSize="26dp"
                android:translationZ="8dp"
                android:background="@android:color/holo_orange_dark"
                android:elevation="8dp"
                android:onClick="ContactUs" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
